; ModuleID = '/home/carl/AnghaBench/vlc/src/preparser/extr_fetcher.c_SearchNetwork.c'
source_filename = "/home/carl/AnghaBench/vlc/src/preparser/extr_fetcher.c_SearchNetwork.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetcher_request = type { i32 }

@FETCHER_SCOPE_NETWORK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.fetcher_request*)* @SearchNetwork to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SearchNetwork(i32* %0, %struct.fetcher_request* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.fetcher_request*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.fetcher_request* %1, %struct.fetcher_request** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.fetcher_request*, %struct.fetcher_request** %4, align 8
  %7 = load i32, i32* @FETCHER_SCOPE_NETWORK, align 4
  %8 = call i64 @SearchByScope(i32* %5, %struct.fetcher_request* %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load %struct.fetcher_request*, %struct.fetcher_request** %4, align 8
  %12 = getelementptr inbounds %struct.fetcher_request, %struct.fetcher_request* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @input_item_SetArtNotFound(i32 %13, i32 1)
  %15 = load %struct.fetcher_request*, %struct.fetcher_request** %4, align 8
  %16 = call i32 @NotifyArtFetchEnded(%struct.fetcher_request* %15, i32 0)
  br label %17

17:                                               ; preds = %10, %2
  ret void
}

declare dso_local i64 @SearchByScope(i32*, %struct.fetcher_request*, i32) #1

declare dso_local i32 @input_item_SetArtNotFound(i32, i32) #1

declare dso_local i32 @NotifyArtFetchEnded(%struct.fetcher_request*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
